syntax = "proto3";
package yuhaiin.api;

option go_package = "github.com/Asutorufa/yuhaiin/config";
// protoc --go_out=plugins=grpc:. --go_opt=paths=source_relative config.proto

message Setting{
  //TODO all json lower case
  SystemProxy SystemProxy = 1 [json_name="system_proxy"];
  Bypass Bypass = 2 [json_name="bypass"];
  Proxy Proxy = 3 [json_name="proxy"];
  DNS DNS = 4 [json_name="dns"];
  DNS LocalDNS = 5[json_name="local_dns"];

  string SsrPath = 11 [json_name="ssr_path",deprecated=true];
}

message SystemProxy {
  bool Enabled = 1 [json_name="enabled"];
  bool HTTP = 2 [json_name="http"];
  bool Socks5 = 3 [json_name="socks5"];
}

message Bypass{
  bool Enabled = 1 [json_name="enabled"];
  string BypassFile = 2 [json_name="bypass_file"];
}

message DNS{
  string Host = 1 [json_name="host"];
  bool DOH = 2 [json_name="doh"];
  bool Proxy = 3 [json_name="proxy"];
  string subnet = 4 [json_name="subnet"];
}

message Proxy {
  string HTTP = 1 [json_name="http"];
  string Socks5 = 2 [json_name="socks5"];
  string Redir = 3 [json_name="redir"];
}